fix overflow scroll

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -4,4 +4,7 @@
 
 * {
   font-family: "Roboto", sans-serif;
+  scroll-behavior: smooth;
+  overscroll-behavior: none;
+  box-sizing: border-box;
 }
